--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>TTS E-Commerce</description>
 
 	<properties>
-		<java.version>1.</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
